using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class EnemyAnimationTags
{

    public const string ENEMY_MOVEMENT = "Moving";

    public const string ENEMY_PUNCH = "Punch";
    public const string ENEMY_KICK = "Kick";
    public const string ENEMY_BLOCK = "Block";

    public const string ENEMY_IDLE = "Idle";
    public const string ENEMY_DEATH = "Death";
}

public class CharacterTags
{

    public const string ENEMY_TAG = "Enemy";
    public const string PLAYER_TAG = "Player";          
    
}